--- a/src/qrCodeScanner.module.css
+++ b/src/qrCodeScanner.module.css
@@ -1,3 +1,12 @@
 .container{
-   background: red;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-direction: column;
+   gap: 10px;
+   height: 100vh;
+}
+.result{
+   font-size: 20px;
+   margin-bottom: 30px;
 }
