--- a/src/components/Scan/generateHistory.module.css
+++ b/src/components/Scan/generateHistory.module.css
@@ -5,10 +5,12 @@
 }
 
 .container h2 {
-  font-size: 1.8rem;
-  color: #333;
+  font-size: 2.8rem;
+  color: #000;
+  font-weight: 700;
   margin-bottom: 1.5rem;
   text-align: center;
+  text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
 }
 
 .empty {
